# zealix

./: Cargo.toml  README.md  lib.rs
contracts/: .env.development.example  Cargo.toml  package.json  test-all.sh
contracts/deployments/zealix/: alephzero-testnet.ts  zealix.contract  zealix.json  zealix.wasm
contracts/scripts/: deploy.ts  script.template.ts
contracts/scripts/utils/: initPolkadotJs.ts
contracts/src/zealix/: Cargo.toml  lib.rs
contracts/typed-contracts/build-extrinsic/: zealix.ts
contracts/typed-contracts/constructors/: zealix.ts
contracts/typed-contracts/contract-info/: zealix.ts
contracts/typed-contracts/contracts/: zealix.ts
contracts/typed-contracts/data/: zealix.json
contracts/typed-contracts/event-data/: zealix.json
contracts/typed-contracts/event-types/: zealix.ts
contracts/typed-contracts/events/: zealix.ts
contracts/typed-contracts/mixed-methods/: zealix.ts
contracts/typed-contracts/query/: zealix.ts
contracts/typed-contracts/tx-sign-and-send/: zealix.ts
contracts/typed-contracts/types-arguments/: zealix.ts
contracts/typed-contracts/types-returns/: zealix.ts
frontend/: tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/components/: home-page-stats.tsx  home-page-title.tsx  seek-asylum-form.tsx  top-bar.tsx
frontend/src/app/employer/: page.tsx
frontend/src/app/government/: page.tsx
frontend/src/deployments/: deployments.ts
frontend/src/utils/: countries.ts
(+21 files in other folders)
