[package]
name = "zealix"
version = "0.0.1"
authors = ["Sunday Aroh <asmelitus@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
ink_prelude = "4.3.0"
ink_storage = "4.3.0"

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
